Convert spreedly to an android project and use gradle for build